<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- CardView untuk memberikan shadow -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true">

                <!-- ShapeableImageView untuk gambar dengan radius dan border -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivEventCover"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/event_image"
                    app:shapeAppearanceOverlay="@style/CustomRoundedImage"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/black"/>

            </androidx.cardview.widget.CardView>

            <!-- Tombol Favourite di atas gambar (kanan bawah) -->
            <ImageButton
                android:id="@+id/btnFavourite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/favorite"
                app:srcCompat="@drawable/ic_favorite_border_dark" />

            <!-- Konten lainnya -->
            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/event_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tvOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/owner_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvEventCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_name"
                    android:textColor="?attr/colorOnBackground"
                    android:paddingEnd="8dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tvBeginTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date"
                    android:textColor="?attr/colorOnBackground"
                    android:paddingEnd="8dp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnBackground"
                android:layout_gravity="center"
                android:text="@string/event_quota" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="?attr/colorOnBackground"
                android:text="@string/description" />

            <Button
                android:id="@+id/btnOpenLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_event_link"
                android:layout_gravity="center_horizontal"
                android:textColor="?attr/colorOnBackground"
                android:backgroundTint="@color/light_blue_600"
                android:layout_marginTop="16dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
