<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivEventCover"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:background="@color/light_gray"
                android:contentDescription="@string/event_image" />

            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/event_name"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textSize="15sp"
                android:lines="2"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/event_date"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:lines="1"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
